# nvidia-industrial-wbc-pipeline

./: .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  Containerfile.gallery  Containerfile.sonic  Containerfile.vla  Makefile  README.md  pyproject.toml  sonic_deploy_pipeline.yaml  sonic_pipeline.yaml  vla_finetune_pipeline.yaml
.claude/: CLAUDE.md
.claude/rules/: ai-compliance.md
deploy/: convergence-test-job.yaml  gpu-scc.yaml  minio-init-job.yaml  minio.yaml  mlflow-rbac.yaml  mlflow.yaml  namespace.yaml  overnight-training-job.yaml  phase1-validation-job.yaml  phase2-validation-job.yaml  phase3-validation-job.yaml  phase3b-validation-jobs.yaml  smoke-test-job.yaml
deploy/infra/: dspa-rbac.yaml  dspa.yaml  gallery.yaml  kueue.yaml  mlflow-rbac.yaml  model-registry.yaml  namespace.yaml  training-operator-rbac.yaml
deploy/jobs/: sonic-data-prep.yaml  sonic-smoke-test.yaml  sonic-test-l40s.yaml  sonic-training-l40s.yaml  sonic-training.yaml  test-flat.yaml  test-preset.yaml  test-rough.yaml  test-warehouse.yaml  training-preset-6k.yaml
slides/: package-lock.json  package.json  slides.md  vla_finetune_pipeline.yaml
tests/: pipeline_test_utils.py  test_config.py  test_env_config.py  test_onnx_compat.py  test_phase_oscillator.py  test_pipeline.py  test_pytorchjob.py  test_registry.py  test_rough_env_config.py  test_sonic_config.py  test_sonic_data_prep.py  test_sonic_export_onnx.py  test_sonic_pipeline.py  test_sonic_train.py  test_sonic_validate.py  test_vla_config.py  test_vla_pipeline.py  test_vla_validate.py
(+45 files in other folders)
